force-app/main/default/objects/PDFTronAnnotations__c/PDFTronAnnotations__c.object-meta.xml
<CustomObject>
    <description>Database table for storing XFDF string for documents.</description>
    <label>PDFTron Annotations</label>
    <nameField>
        <label>File Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDFTron Annotations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>