force-app/main/default/objects/PDFTronAnnotations__c/fields/Annotation_Id__c.field-meta.xml
<CustomField>
    <fullName>Annotation_Id__c</fullName>
    <externalId>true</externalId>
    <label>Annotation Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>